Added a page to list bookings and a search functionality

--- a/src/main/resources/templates/bookingConfirmation.html
+++ b/src/main/resources/templates/bookingConfirmation.html
@@ -46,7 +46,7 @@
     </tr>
   </table>
   <form th:method="POST">
-    <input type="submit" value="Submit">
+    <input type="submit" value="Confirm">
   </form>
 
 </section>
