added JPA entity mapping and replaced InMemory repositories with JPA Repositories

--- a/src/main/resources/templates/bookingConfirmation.html
+++ b/src/main/resources/templates/bookingConfirmation.html
@@ -38,7 +38,7 @@
     </tr>
     <tr>
       <td><b>Booking for Event</b></td>
-      <td th:text="${booking.eventName}">Event Name</td>
+      <td th:text="${booking.event.name}">Event Name</td>
     </tr>
     <tr>
       <td><b>Number of Tickets</b></td>
