--- a/src/main/resources/templates/listEvents.html
+++ b/src/main/resources/templates/listEvents.html
@@ -26,6 +26,15 @@
 
         <label for="minRating">Minimum Rating:</label>
         <input type="number" id="minRating" name="minRating" min="0" step="0.1"><br/><br/>
+        <select id="location" name="locationId">
+            <option value="">All Locations</option>
+            <option th:each="loc : ${locations}"
+                    th:value="${loc.id}"
+                    th:text="${loc.name}">
+            </option>
+        </select>
+
+
 
         <input type="submit" value="Search">
 
